[edit] fixed bugs related to the creation of Positions